1.8-0 (4/15/2016)
-----
ggplots made interactive (allows mouse hovers for retrieving values and 
brushes for zooming). Affects Trends and Pyramids.

Removed "Median" tab.

Fixed an issue with oldest age in the mx dataset.

Default value of the slider changed to 2015.

Function wpp.explorer passes additional arguments to shiny runApp. 


1.7-0/1 (8/8/2015)
-----
Added support for 2015.

Removed support for wpp2008.

Unit tests converted to testthat.

A few shiny deprecations solved.

1.6-2 (5/28/2015)
-----
Fixed bug that was putting wrong labels into table outputs (thanks to Jon Azose).

1.6-0/1 (4/10/2015)
-----
Indicator for the net migration rate added.

Added link to the project website.

1.5-0 (2/6/2015)
-----
Indicators added:
	- mean age at childbearing
	- percent age-specific fertility

1.4-0 (8/21/2014)
-----
Updated to shiny 0.10.0.

Removed "Data" tab.

"Sortable Data" switched to renderDataTable.

Uncertainty can be selected as multiple choice.

A few minor aesthetic changes.

Added info about data source.

1.3-0 (8/8/2014)
-----
Can display aggregations (added to wpp2012).

Indicator description added.

1.2-0 (12/20/2013)
-----
Added a motion chart (inspired by Hans Rosling's charts).

1.1-2 (12/3/2013)
-----
Bug in set.wpp.year fixed.

1.1-1 (10/9/2013)
-----
A few unit tests.

Minor polishing.

1.1-0 (10/2/2013)
-----
New indicators: Mean childbearing age, mean annual pop. growth

Propotional pyramids

Vizualization for Age profiles for population, mortality and fertility.

Log scale added.


1.0-3 (9/25/2013)[CRAN]
------
Initial version.