@@ -1,6 +1,6 @@
 Package: wppExplorer
-Version: 1.7-1
-Date: 2015-8-9
+Version: 1.8-0
+Date: 2016-4-15
 Title: Explorer of World Population Prospects
 Author: Hana Sevcikova <hanas@uw.edu>
 Maintainer: Hana Sevcikova <hanas@uw.edu>
